Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -774,6 +774,25 @@
 	pages = {268--275}
 }
 
+@article{dunn_two_2005,
+	title = {Two cues for sex determination in \textit{{Gammarus} duebeni} : {Adaptive} variation in environmental sex determination?},
+	volume = {50},
+	issn = {00243590},
+	shorttitle = {Two cues for sex determination in \textit{{Gammarus} duebeni}},
+	url = {http://doi.wiley.com/10.4319/lo.2005.50.1.0346},
+	doi = {10.4319/lo.2005.50.1.0346},
+	language = {english},
+	number = {1},
+	urldate = {2021-02-22},
+	journal = {Limnology and Oceanography},
+	author = {Dunn, Alison M. and Hogg, John C. and Kelly, Andrew and Hatcher, Melanie J.},
+	month = jan,
+	year = {2005},
+	pages = {346--353},
+	file = {Dunn_et_al_2005_Two_cues_for_sex_determination_in_iGammarus_duebeni-i.pdf:/Users/amlalejini/Dropbox/Library/research-bibliography/Dunn_et_al_2005_Two_cues_for_sex_determination_in_iGammarus_duebeni-i.pdf:application/pdf}
+}
+
+
 
 
 
