--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -11,18 +11,13 @@
 
 \section{}
 Fluctuating environmental conditions are ubiquitous in natural systems, and the particular mechanisms that populations rely on to cope with environmental fluctuations profoundly influence subsequent evolutionary dynamics.
-% Phenotypic plasticity is the capacity for a single genotype to alter phenotypic expression in response to environmental conditions, allowing plastic genotypes to dynamically adjust to environmental change. 
 Phenotypic plasticity, the ability of a single genotype to produce alternate phenotypes, allows organisms to dynamically adjust phenotypic expression in an environmentally dependent context.
-% O: Here, we investigate how phenotypic plasticity alters evolutionary dynamics and influences evolutionary outcomes in fluctuating environments.
-% NG: Here, we use self-replicating computer programs called ``Avidians'' to investigate how phenotypic plasticity alters evolutionary dynamics and influences evolutionary outcomes when these digital organisms are evolved in cyclically changing environments. Specifically, we evaluate the potential of plastic and non-plastic populations of Avidians to evolve and then maintain complex traits.
 Here, we use digital organisms (self-replicating computer programs) to investigate how the evolution of adaptive phenotypic plasticity alters evolutionary dynamics and influences evolutionary outcomes in cyclically changing environments.
 Specifically, we 
-(1) examined the evolutionary histories of plastic and non-plastic populations to test whether the evolution of adaptive plasticity promoted or constrained subsequent evolutionary change;
-(2) evaluated if adaptive plasticity improves fitness landscape exploration and exploitation, testing whether plastic populations are better able to evolve and then maintain novel traits;
+(1) examined the evolutionary histories of plastic and non-plastic populations to test whether the evolution of adaptive plasticity promotes or constrains subsequent evolutionary change;
+(2) evaluated if adaptive plasticity improves fitness landscape exploration and exploitation by testing whether plastic populations are better able to evolve and then maintain novel traits;
 and (3) compared the prevalence of deleterious hitchhiking in plastic and non-plastic populations to test if the evolution of adaptive plasticity increases the potential for deleterious cryptic variation to accumulate.
-%We compare the evolutionary dynamics of plastic and non-plastic populations of digital organisms --- self-replicating computer programs --- evolved under cyclically changing environments; we evaluate each population's potential to evolve and maintain additional complex features.
 We find that populations with adaptive phenotypic plasticity evolve more slowly than non-plastic populations, which rely on genetic variation from \textit{de novo} mutations to continuously re-adapt to the environment.
-% These non-plastic populations undergo more frequent selective sweeps, accumulate many more genetic changes, and move to regions of the fitness landscape where mutations will more frequently result in phenotypic changes. 
 The non-plastic populations undergo more frequent selective sweeps, accumulate many more genetic changes, [finish listing big results]. 
 We find that phenotypic plasticity stabilizes populations against environmental fluctuations; whereas the repeated selective sweeps in non-plastic populations drive the loss of beneficial traits via deleterious hitchhiking.  
 As such, plastic populations are more likely to retain novel adaptive traits than their non-plastic counterparts. 
@@ -31,5 +26,3 @@ All natural environments subject populations to some form of change; our finding
 \input{tex/keywords}
 
 \end{abstract}
-
-% AML: Work in existing work on whether or not plasticity promotes evolutionary adaptation? This work suggests that stabilization effect another way for plasticity to promote subsequent evolutionary adaptation in fluctuating environments. 
