--- a/tex/results.tex
+++ b/tex/results.tex
@@ -176,18 +176,25 @@ In contrast, across all PLASTIC and STATIC dominant lineages, we observed that a
 % -- Number of instructions executed per genotype --
 % examining the number of times a \code{poison} instruction is executed by each genotype along the dominant lineage (including the final dominant genotype).
 Adaptive phenotypic plasticity evolved in \deleteriousHitchhikingPlasticReps\ of \deleteriousHitchhikingReplicates\ replicates from the PLASTIC treatment during phase one of Experiment III; we used this more limited group to seed the \deleteriousHitchhikingPlasticReps\ phase-two PLASTIC replicates.
-Figure [x] shows the [whatever we decide] for PLASTIC, NON-PLASTIC, and STATIC treatments.
-At the end of our experiment, no dominant genotypes evolved in PLASTIC or STATIC treatments express the \code{poison} instruction; however, the dominant genotype from 14 replicates of the NON-PLASTIC treatment did express the \code{poison} instruction at least once (statistically significant, [stats]).
-The minimal instances of \code{poison} execution in dominant organisms is expected given that each execution is a 10\% reduction in metabolic rate.
+% Figure [x] shows the [whatever we decide] for PLASTIC, NON-PLASTIC, and STATIC treatments.
+At the end of our experiment, no dominant genotypes evolved in PLASTIC or STATIC treatments expressed the \code{poison} instruction under any environmental condition; however, the dominant genotype from 14 replicates of the NON-PLASTIC treatment did express the \code{poison} instruction at least once (statistically significant, [stats]).
+%The minimal instances of \code{poison} execution in dominant organisms is expected given that each execution is a 10\% reduction in metabolic rate.
+The \code{poison} execution in dominant organisms is expected to be kept minimal given that each execution is a 10\% reduction in metabolic rate.
+
 
 % - total offspring with increases -
-We found that the number of offspring on NON-PLASTIC lineages where \code{poison} instruction execution increases was significantly higher than that of PLASTIC or STATIC lineages [stats]; we found no significant difference in \code{poison} execution along dominant lineages between PLASTIC and STATIC lineages.
+Figure [x] shows the [prevalence of poison instructions in final dominant genotypes and along dominant linages] for all treatments.
+%We found that the number of offspring on NON-PLASTIC lineages where \code{poison} instruction execution increases was significantly higher than that of PLASTIC or STATIC lineages [stats]; we found no significant difference in \code{poison} execution along dominant lineages between PLASTIC and STATIC lineages.
+We found that NON-PLASTIC lineages had significantly more organisms that executed the \code{poison} instruction more often than their parent as compared to PLASTIC or STATIC lineages [stats]; we found no significant difference in \code{poison} execution along dominant lineages between PLASTIC and STATIC lineages.
+%These numbers remain significant when normalized by number of generations ([stats]).
+These significance patterns do not qualitatively change when normalized by number of generations ([stats]).
+
 % - increases per offspring -
-We also found that the per-generation number of \code{poison} execution increases along the lineage was significantly higher in NON-PLASTIC lineages than in PLASTIC or STATIC lineages [stats], and we found no significant difference between PLASTIC and STATIC lineages.
+% We also found that the per-generation number of \code{poison} execution increases along the lineage was significantly higher in NON-PLASTIC lineages than in PLASTIC or STATIC lineages [stats], and we found no significant difference between PLASTIC and STATIC lineages.
 
 % -- When/where does hitchhiking take place? --
 Next, we examined the frequency that mutations that increase \code{poison} execution co-occur with mutations that change the base task profile of offspring along dominant lineages across treatments.
-Across all NON-PLASTIC dominant lineages, we found that approximately 49\% (956 out of 1916) mutations that increase \code{poison} execution co-occurred with mutations that change the base task profile ([per-lineage statistically significant relative to PLASTIC or STATIC, stats]); we did not observe instances of co-occurrence in PLASTIC and STATIC lineages.
+Across all NON-PLASTIC dominant lineages, we found that approximately 49\% (956 out of 1916) mutations that increased \code{poison} execution co-occurred with mutations that changed the base task profile; we observed zero instances of co-occurrence in PLASTIC and STATIC lineages.
 Additionally, we did not find evidence that mutations that increased \code{poison} execution occurred as cryptic variation in PLASTIC lineages.
 
 
